--- a/main/Kconfig
+++ b/main/Kconfig
@@ -470,12 +470,24 @@ menu "Keyboard Configuration"
             int "Key number of the KEYPAD_0 button.(When pressed Fn)"
             default 40
             range 0 79
+        config KEY_KEYPAD_SUBTRACT_NUM
+            int "Key number of the KEYPAD SUBTRACT button.(When pressed Fn)"
+            default 39
+            range 0 79
+        config KEY_KEYPAD_ADD_NUM
+            int "Key number of the KEYPAD ADD button.(When pressed Fn)"
+            default 28
+            range 0 79
+        config KEY_KEYPAD_DIVIDE_NUM
+            int "Key number of the KEYPAD Divide button.(When pressed Fn)"
+            default 19
+            range 0 79
     endmenu
 endmenu
 menu "LED Configuration"
     config KEY_LED_SWITCH_NUM
         int "LED switch key number"
-        default 28
+        default 27
 
     config KEY_LED_ADD_NUM
         int "Key number of the led brightness add button.(When pressed Fn)"
